# demo-actix

./: .env  .env.docker  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  get_me.http  login.http  register.http  sample.http
migrations/: 20230308015717_init.down.sql  20230308015717_init.up.sql
src/: constant.rs  main.rs
src/config/: config.rs  database.rs  http_client.rs  mailer.rs  mod.rs
src/dao/: mod.rs  public_data.rs  user.rs
src/model/: mod.rs  public_data.rs  response.rs  user.rs
src/route/: auth.rs  health_check.rs  hello_route.rs  mod.rs  public_data.rs
src/service/: email.rs  errors.rs  jwt_auth.rs  mod.rs  ping_service.rs  upload_image.rs
templates/: email_registration_confirmation.html
