[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Naim Aryudya <naimaryudya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-web-grants = "3.0.1"
actix-cors = "0.6.4"
awc = "3.1.1"
diesel = { version = "2.0.3", features = ["r2d2","sqlite"] }
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"
fast_image_resize = "2.6.0"
