[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Naim Aryudya <naimaryudya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-web-grants = "3.0.1"
actix-cors = "0.6.4"
awc = "3.1.1"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-actix-native-tls", "chrono", "uuid"]}
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"
fast_image_resize = "2.6.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
jsonwebtoken = "8.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
argon2 = "0.4.1"
chrono = { version = "0.4.23", features = ["serde"] }

