[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Naim Aryudya <naimaryudya@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-web-grants = "3.0.1"
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
tokio = { version = "1.24.1", features = ["fs"] }
awc = "3.1.1"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-actix-native-tls", "chrono", "uuid"]}
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"
image = "0.24.5"
image_compressor = "1.3.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
jsonwebtoken = "8.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
argon2 = "0.5.0"
chrono = { version = "0.4.23", features = ["serde"] }
mime = "0.3.16"
slug = "0.1.4"
futures-util = "0.3.25"
